# RFSN-ROBOT-NEW

./: .abacus.donotdelete  .gitignore  BUILD_STATUS.md  CHANGELOG.md  Dockerfile  FINAL_SEAL.md  HAZARD_TABLE.md  PITCH.md  PR_SUMMARY.md  QUICKSTART.md  README.md  README_RFSN.md  RELEASE_CHECKLIST.md  SYSTEM_GUARANTEES.md  SYSTEM_ID.json  TRACEABILITY.md  UPGRADE_SUMMARY.md  V10_UPGRADE_SUMMARY.md  V11_UPGRADE_SUMMARY.md  V12_UPGRADE_SUMMARY.md  V6_GRASP_VALIDATION_SUMMARY.md  V8_UPGRADE_SUMMARY.md  bringup_safe.py  debug_logging.py  demo.sh  example_rfsn_demo.py  main.py  panda_table_cube.xml  pick_and_throw_old.py  pyproject.toml  requirements-extras.txt  requirements.txt  run_demo.py  simulate_model.py  smooth_throw.py  test_evaluation_validation.py  test_grasp_quality.py  test_gripper_validation.py  test_ik_validation.py  test_integration.py  (+9 more)
assets/: franka_panda_safe.xml  mycobot_safe.xml
baselines/: fast_mpc.py  panda_harness.py  panda_mpc_inverse_dynamics.py
demos/: demo_impedance.py  demo_motion.py  demo_v6_grasp_validation.py  pick_and_throw.py  throw_cube_simple.py
eval/: metrics.py  report.py  run_benchmark.py  test_force_extraction.py  test_force_truth.py  test_mpc_sensitivity.py
examples/: interactive_control.py  run_simulation.py
rfsn/: __init__.py  controller_types.py  decision.py  domain_randomization.py  harness.py  harness_v2.py  impedance_controller.py  learner.py  learner_v2.py  logger.py  mpc_receding.py  mpc_robust.py  mpc_task_space.py  mujoco_utils.py  obs_packet.py  pipeline.py  profiles.py  profiles_v2.py  safety.py  state_machine.py  (+2 more)
(+59 files in other folders)
